fix: 조합법 상세페이지에서 검색순위 드롭다운 가려져 z-index 수정

--- a/src/assets/style/components/SearchBox.scss
+++ b/src/assets/style/components/SearchBox.scss
@@ -27,7 +27,7 @@
     transition: width 0.3s;
     .items-match {
       position: absolute;
-      z-index: 1;
+      z-index: 2;
       width: 100%;
       background-color: var(--color-white);
       border: 1px solid var(--border-gray);
